--- a/mcsv-tasks/pom.xml
+++ b/mcsv-tasks/pom.xml
@@ -15,6 +15,23 @@
 	<description>Task management</description>
 	<properties>
 		<java.version>17</java.version>
+		<sonar.coverage.exclusions>
+			**/McsvTasksApplication.java,
+			**/models/entity/*,
+			**/configurations/*,
+			**/responses/*,
+			**/dtos/*
+		</sonar.coverage.exclusions>
+		<sonar.exclusions>
+			**/McsvTasksApplication.java,
+			**/models/*,
+			**/configurations/*,
+			**/responses/*,
+			**/dtos/*
+		</sonar.exclusions>
+		<sonar.coverage.jacoco.xmlReportPaths>
+			target/site/jacoco/jacoco.xml
+		</sonar.coverage.jacoco.xmlReportPaths>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -69,5 +86,43 @@
 			</plugin>
 		</plugins>
 	</build>
+	<profiles>
+		<profile>
+			<id>coverage</id>
+			<activation>
+				<activeByDefault>true</activeByDefault>
+			</activation>
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>org.jacoco</groupId>
+						<artifactId>jacoco-maven-plugin</artifactId>
+						<version>0.8.7</version>
+						<executions>
+							<execution>
+								<id>prepare-agent</id>
+								<goals>
+									<goal>prepare-agent</goal>
+								</goals>
+							</execution>
+							<execution>
+								<id>report</id>
+								<goals>
+									<goal>report</goal>
+								</goals>
+								<configuration>
+									<formats>
+										<format>XML</format>
+									</formats>
+								</configuration>
+							</execution>
+						</executions>
+					</plugin>
+
+				</plugins>
+			</build>
+		</profile>
+	</profiles>
+
 
 </project>
